--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.14",
     "css": "^3.0.0",
+    "openai-api": "^1.3.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
